--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 
     <div class="slider">
         <div class="slides">
-            <div class="slide"><img src="1.jpg" alt="Романтика"></div>
-            <div class="slide"><img src="2.jpg" alt="Свидание"></div>
-            <div class="slide"><img src="3.jpg" alt="Сердце"></div>
-            <div class="slide"><img src="4.jpg" alt="Романтика"></div>
-            <div class="slide"><img src="5.jpg" alt="Свидание"></div>
-            <div class="slide"><img src="6.jpg" alt="Сердце"></div>
-            <div class="slide"><img src="7.jpg" alt="Романтика"></div>
-            <div class="slide"><img src="8.jpg" alt="Свидание"></div>
+            <div class="slide"><img src="img/1.jpg" alt="Романтика"></div>
+            <div class="slide"><img src="img/2.jpg" alt="Свидание"></div>
+            <div class="slide"><img src="img/3.jpg" alt="Сердце"></div>
+            <div class="slide"><img src="img/4.jpg" alt="Романтика"></div>
+            <div class="slide"><img src="img/5.jpg" alt="Свидание"></div>
+            <div class="slide"><img src="img/6.jpg" alt="Сердце"></div>
+            <div class="slide"><img src="img/7.jpg" alt="Романтика"></div>
+            <div class="slide"><img src="img/8.jpg" alt="Свидание"></div>
         </div>
     </div>
     <div class="slider-controls">
@@ -109,7 +109,6 @@
 
     <script>
         function showLove() {
-            window.open("https://ogotop.com/torrent/0225/The_Sims_4_v1.112.519.1020.torrent", "_blank");
             alert("Люблю тебя, Карина! ❤️");
         }
 
